<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_RegisterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundYellow"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activities.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/lay_frame_Register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:background="@drawable/login_background">

            <Button
                android:id="@+id/btn_reg_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_chevron_left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    style="@style/headerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:text="Registration"
                    android:textColor="@color/backgroundYellow" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_registerName"
                    style="@style/viewParent"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_registerName"
                        style="@style/modifiedEditText"
                        android:hint="Name"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_registerEmail"
                    style="@style/viewParent">

                    <EditText
                        android:id="@+id/et_registerEmail"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/normalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Gender: "
                        android:textColor="@color/backgroundYellow"
                        tools:ignore="HardcodedText" />

                    <RadioGroup
                        android:id="@+id/registration_Gender_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded">

                        <RadioButton
                            android:id="@+id/registration_radioButtonMale"
                            style="@style/modifiedEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male"
                            android:textColor="@color/backgroundYellow"
                            tools:ignore="HardcodedText" />

                        <RadioButton
                            android:id="@+id/registration_radioButtonFemale"
                            style="@style/modifiedEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:text="Female"
                            android:textColor="@color/backgroundYellow" />
                    </RadioGroup>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_registerPassword"
                    style="@style/viewParent"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_registerPassword"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_registerConfirmPassword"
                    style="@style/viewParent">

                    <EditText
                        android:id="@+id/et_registerConfirmPassword"
                        style="@style/modifiedEditText"
                        android:hint="Confirm password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/cbTermsAndPrivacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/tvTermsAndPolicy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:padding="5dp"
                        android:text="@string/terms_conditions"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">


            <TextView
                android:id="@+id/tv_alreadyHaveAnAccount"
                style="@style/smallText"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:gravity="right"
                android:text="Already have an account? Sign In"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="Register"
        android:textAllCaps="false"
        android:textSize="@dimen/headerTextSize"
        android:textStyle="bold"
        app:layout_anchor="@id/lay_frame_Register"
        app:layout_anchorGravity="bottom|right"
        app:rippleColor="@color/backgroundYellow" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>